Delete device documentation and fix chrome target jumping offset

--- a/src/common/hammock-custom.css
+++ b/src/common/hammock-custom.css
@@ -7,7 +7,10 @@ body {
 
 .hammock-a-name {
     position: relative;
+    display: inline-block;
     top: -40px;
+    height: 1px;
+    overflow: hidden;
 }
 
 .hammock-chapter-contents {
